--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
             -->
             <li><a href="/">My List</a></li>
             <li><a href="/ratings">My Ratings</a></li>
+            <li><a href = "/recent">Recently watched</a></li>
         </ul>
 
         {% block content %}
